MODOAIPMH-626 - Upgrade module to Vert.x 5.0 (#443)
* MODOAIPMH-626 - Upgrade module to Vert.x 5.0

* MODOAIPMH-626 - Upgrade module to Vert.x 5.0 (pom.xml cleanup)